; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/poch/extr_poch.c___poch_channel_clear_counters.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/poch/extr_poch.c___poch_channel_clear_counters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.channel_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.channel_info*)* @__poch_channel_clear_counters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__poch_channel_clear_counters(%struct.channel_info* %0) #0 {
  %2 = alloca %struct.channel_info*, align 8
  store %struct.channel_info* %0, %struct.channel_info** %2, align 8
  %3 = load %struct.channel_info*, %struct.channel_info** %2, align 8
  %4 = getelementptr inbounds %struct.channel_info, %struct.channel_info* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 2
  store i64 0, i64* %5, align 8
  %6 = load %struct.channel_info*, %struct.channel_info** %2, align 8
  %7 = getelementptr inbounds %struct.channel_info, %struct.channel_info* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  store i64 0, i64* %8, align 8
  %9 = load %struct.channel_info*, %struct.channel_info** %2, align 8
  %10 = getelementptr inbounds %struct.channel_info, %struct.channel_info* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
